--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -17,6 +17,7 @@
 \newcommand{\SG}{\mathscr{G}}
 \newcommand{\BO}{\mathcal{O}}
 \newtheorem{proposition}{Proposition}
+\newcommand{\restrict}[2]{#1\raise-0.5ex\hbox{\ensuremath|}_{#2}}
 \allowdisplaybreaks
 \begin{document}
 
