--- a/thesis/algorithm.tex
+++ b/thesis/algorithm.tex
@@ -2,18 +2,19 @@
 
 The exhaustive algorithm described in the previous section subjects each pair of non-adjacent vertices in a graph
 \(G\) to the two choices of like (vertex contraction) or different (edge addition) color assignment in a recursive
-manner.  The leaves of the resulting Zykov tree represent complete graphs that describe all of the possible \(k\)
-colorings of \(G\), with the complete graphs of smallest order representing chromatic colorings of \(G\).
+manner.  The leaves of the resulting Zykov tree that tracks these choices represent complete graphs that describe
+all of the possible \(k\) colorings of \(G\), with the complete graphs of smallest order representing chromatic
+colorings of \(G\).
 
-The major advantages of the exhaustive algorithm are that it isn't dependent on whether or not a graph is
-connected, an example of a chromatic coloring is readily available, and the fact that the algorithm, due to its
-Turing machine nature, can be coded rather easily to run on a computer.  Its major disadvantage is its high runtime
-complexity due to the need to generate the entire Zykov tree using an exponentially growing number of recursive
-calls.
+The major advantages of the exhaustive algorithm are that it isn't dependent on the structure of the graph (e.g.,
+connectedness), an example of a chromatic coloring is readily available, and the fact that the algorithm, due to
+its Turing machine nature, can be coded rather easily to run on a computer.  Its major disadvantage is its high
+runtime complexity due to the need to generate the entire Zykov tree using an exponentially growing number of
+recursive calls.
 
 Thus, the goals of the proposed algorithm are as follows:
 \begin{enumerate}
-\item It does not depend on whether a graph is connected or not.
+\item It does not depend on the structure of a graph.
 \item An example of a chromatic coloring should be easily available.
 \item It can be easily coded for execution on a computer.
 \item It has significantly better runtime complexity than the exhaustive algorithm.
@@ -33,7 +34,8 @@ examples of actual chromatic colorings, the proposed algorithm requires a revers
 in order to construct such a coloring.  Nevertheless, this technique still has the advantage over common coloring
 algorithms such as greedy coloring because it is not heuristic.  However, as was stated earlier, during the
 axiomatic design phase it is more important to know the minimum number of parts as opposed to actual functional
-requirement allocation to those parts.
+requirement allocation to those parts.  Thus, a little effort to reconstruct a chromatic coloring after the fact is
+not of major importance.
 
 This algorithm was first proposed by the author and his advisor in collaboration with a team of mechanical
 engineering researchers from SUNY Buffalo \cite{cavallaro}.  It accepts a graph \(G\) as input, provides \(\X(G)\)
@@ -44,17 +46,17 @@ of the algorithm to a sample graph then follow.
 
 \subsection{Outer Loop}
 
-The outer loop accepts a graph \(G\) as input and returns \(\X(G)\).  It initially checks for some edge cases and
-then loops on increasing values of \(k\).  For each value of \(k\) the called subroutine executes the modified
+The outer loop accepts a graph \(G\) as input and returns \(\X(G)\).  It initially checks for some degenerate cases
+and then loops on increasing values of \(k\).  For each value of \(k\) the called subroutine executes the modified
 exhaustive algorithm to determine if \(G\) is \colorable{k}.  The first such successful return identifies
 \(\X(G)\).
 
 The steps of the outer loop are as follows:
 
 \begin{enumerate}
-\item \label{step:null} If \(n=0\) then return \(0\), thus handling the edge case of a null graph.
+\item \label{step:null} If \(n=0\) then return \(0\), thus handling the degenerate case of a null graph.
 
-\item \label{step:one} If \(m=0\) then return \(1\), thus handling the edge case of an empty graph.
+\item \label{step:one} If \(m=0\) then return \(1\), thus handling the degenerate case of an empty graph.
 
 \item \label{step:init} Initialize \(k\) to \(2\).
 
@@ -120,26 +122,24 @@ The called subroutine executes a modified version of the exhaustive algorithm th
 not \(G\) is \colorable{k}.  Internally, various tests are applied to trim the corresponding Zykov tree or abandon
 it all together based on the current value of \(k\).
 
-The steps of the called subroutine and their associated theorems are as follows:
+The steps of the called subroutine and references to their associated theorems are as follows:
 
 \begin{enumerate}
-\item \label{step:check} If \(n\le k\) then return true (Proposition \ref{prop:coloring3}).  This success condition
-  is achieved whenever \(G\) is simplified by removing sufficent vertices (steps \ref{step:small} and
-  \ref{step:neighbor}) or when the outer loop has sufficiently incremented \(k\) (step \ref{step:incr}).
+\item \label{step:check} If \(n\le k\) then return true (Proposition \ref{prop:coloring3}).
 
 \item \label{step:dencalc} Calculate a maximum edge threshold:
   \[a=\frac{n^2(k-1)}{2k}\]
 
-\item \label{step:density} If \(m>a\) then return false (Lemma \ref{cor:density}).
+\item \label{step:density} If \(m>a\) then return false (Corollary \ref{cor:density}).
 
 \item \label{step:smallcalc} Construct the set \(X\) of all vertices with degree less than \(k\):
   \[X=\setb{v\in V(G)}{\deg(v)<k}\]
 
-\item \label{step:small} \(X\ne\emptyset\) then replace \(G\) with \(G-X\) and go to step \ref{step:check} (Corollary
-  \ref{cor:lowdeg}).
+\item \label{step:small} \(X\ne\emptyset\) then replace \(G\) with \(G-X\) and go to step \ref{step:check}
+  (Corollary \ref{cor:lowdeg}).
 
 \item \label{step:neighbor} If \(G\) has vertices \(u\) and \(v\) such that \(N(u)\subseteq N(v)\) then replace
-  \(G\) with \(G-u\) and go to step \ref{step:check} (Lemma \ref{lem:subset}).
+  \(G\) with \(G-u\) and go to step \ref{step:check} (Theorem \ref{thm:subset}).
 
 \item \label{step:select} Select two vertices \(u,v\in V(G)\) with the smallest number of common neighbors and let
   \[b=\abs{N(u)\cap N(v)}\]
@@ -231,30 +231,26 @@ A flowchart of these steps is shown in Figure \ref{fig:called}.
   \caption{Algorithm Called Subroutine}
 \end{figure}
 
-Steps \ref{step:check}--\ref{step:neighbor} of the subroutine attempt to remove vertices to achieve a simpler graph
-that is also \colorable{k}.  Note that each time a vertex is removed, the subtrees associated with that vertex in
-the corresponding Zykov tree for \(G\) are ignored.  Since these same steps would just be repeated for \(k+1\), the
-subroutine returns the current state of the possibly simplified \(G\) to the outer loop as a starting point for the
-next candidate value of \(k\).
+Step \ref{step:check} of the called subroutine is the success termination condition.  Success occurs when \(G\) is
+simplified by removing sufficent vertices (steps \ref{step:smallcalc}--\ref{step:neighbor}) or when the outer loop
+has sufficiently incremented \(k\) (step \ref{step:incr}) such that \(n\le k\).
 
-Steps \ref{step:density} and \ref{step:common} of the subroutine apply tests that attempt to disprove that the
-current state of \(G\) is \colorable{k} for the current value of \(k\).  If so, then the current Zykov tree is
-abandoned and the subroutine returned false.  This allows the outer loop to continue with \(k+1\).
+Steps \ref{step:smallcalc}--\ref{step:neighbor} of the called subroutine attempt to remove vertices to achieve a
+simpler graph that is equivalently \colorable{k}.  Each time a vertex is removed, the subtrees associated with that
+vertex in the corresponding Zykov tree for \(G\) are ignored.  Since these same steps would just be repeated for
+\(k+1\), the subroutine returns the current state of the possibly simplified \(G\) to the outer loop as a starting
+point for the next candidate value of \(k\).
 
-Step \ref{step:select2} of the subroutine assumes that there exists at least one pair of non-adjacent vertices.
-The previous steps in the algorithm guarantee that this is indeed the case.  Otherwise, the current state of \(G\)
-at step \ref{step:select} would be a complete graph and thus \(b=n-2\).  Comparing this to the value of \(c\) in
-step \ref{step:neighcalc}:
-\[b-c=(n-2)-\left(n-2-\frac{n-2}{k-1}\right)=\frac{n-2}{k-1}\]
-with \(k\ge2\).  We can also conclude that \(n>2\) at this point, since any graph of order \(1\) or \(2\) would
-have been wiped out by vertex reduction in step \ref{step:small}.  And so \(b-c>0\), causing step \ref{step:common}
-to eliminated any complete graph.  Therefore, the current state of \(G\) is not complete and so there exists at
-least one pair of non-adjacent vertices.
+Steps \ref{step:dencalc}--\ref{step:density} and \ref{step:select}--\ref{step:common} of the called subroutine
+apply tests that attempt to disprove that the current state of \(G\) is \colorable{k} for the current value of
+\(k\).  If so, then the current Zykov tree is abandoned and the subroutine returned false.  This allows the outer
+loop to continue with \(k+1\).
 
-The remaining steps of the subroutine constitute the recursive portion of the modified exhaustive algorithm.  The
-subroutine is guaranteed to return because either there will be sufficient contractions such that \(n\le k\),
-resulting in a true return, or sufficient edge additions such that the graph becomes complete and is rejected by
-step \ref{step:common}, resulting in a false return.
+The remaining steps of the called subroutine constitute the recursive portion of the modified exhaustive algorithm.
+The subroutine is guaranteed to return because either there will be sufficient vertex contractions such that \(n\le
+k\), resulting in a true return, or sufficient edge additions such that the graph becomes complete and is rejected
+by step \ref{step:common}, resulting in a false return.  Note that in the event of a false return, any
+modifications to the current state of \(G\) resulting from the recursive calls are not returned to the outer loop.
 
 \clearpage
 
@@ -263,8 +259,10 @@ step \ref{step:common}, resulting in a false return.
 This section contains the theorems that support the steps in the called subroutine.  Remember that the success check
 of step \ref{step:check} is already supported by Proposition \ref{prop:coloring3}.
 
-The maximum edge threshold test of steps \ref{step:dencalc} and \ref{step:density} are supported by Theorem
-\ref{thm:density} and Corollary \ref{cor:density}.
+\subsubsection{Maximum Edge Threshold}
+
+The maximum edge threshold test of steps \ref{step:dencalc} and \ref{step:density} is supported by Theorem
+\ref{thm:density}.
 
 \begin{theorem}[Maximum Edge Threshold]
   \label{thm:density}
@@ -313,6 +311,54 @@ The called subroutine actually uses the contrapositive of this result, as stated
   then \(G\) is not \colorable{k}.
 \end{corollary}
 
+Corollary \ref{cor:density} is demonstrated by Figure \ref{fig:density}.  The shown graph \(G\) has \(n=4\),
+\(m=5\), and \(\X(G)=3\).  Testing for \(k=2\):
+\[a=\frac{4^2(2-1)}{2\cdot2}=4\]
+But \(m=5>4=a\) and so we can conclude that \(G\) is not \colorable{2}.  However, testing for \(k=3\);
+\[a=\frac{4^2(3-1)}{2\cdot3}=5.3\]
+So \(m=5\ngtr5.3=a\) and thus \(G\) \emph{may} be \(3\)-colorable, since this test only provides a necessary and
+not a sufficient condition.
+
+\begin{figure}[h]
+  \label{fig:density}
+  \begin{center}
+    \begin{tikzpicture}
+      \colorlet{c1}{green!25!white}
+      \colorlet{c2}{blue!25!white}
+      \colorlet{c3}{red!25!white}
+      \begin{scope}[every node/.style={coordinate}]
+        \cycleNnodes{4}{(0,0)}{1in}{135}{c};
+      \end{scope}
+      \begin{scope}[every node/.style={labeled node}]
+        \node [fill=c1] (a) at (c1) {\(a\)};
+        \node [fill=c2] (b) at (c2) {\(b\)};
+        \node [fill=c1] (c) at (c3) {\(c\)};
+        \node [fill=c3] (d) at (c4) {\(d\)};
+      \end{scope}
+      \draw (a) edge (b) edge (d);
+      \draw (b) edge (c) edge (d);
+      \draw (c) edge (d);
+    \end{tikzpicture}
+
+    \bigskip
+
+    \(G\)
+  \end{center}
+  \caption{Corollary \ref{cor:density} Example}
+\end{figure}
+
+In fact, the the test of Corollary \ref{cor:density} will always fail for a complete graph when \(k<n\).  Since
+\(k,n>0\):
+\begin{gather*}
+  \frac{n(n-1)}{2}>\frac{n^2(k-1)}{2k} \\
+  kn(n-1)>n^2(k-1) \\
+  kn^2-kn>kn^2-n^2 \\
+  kn<n^2 \\
+  k<n
+\end{gather*}
+
+\subsubsection{Vertex Removal}
+
 The theorems that support vertex removal make use of Lemma \ref{lem:remone}.
 
 \begin{lemma}
@@ -334,7 +380,7 @@ The theorems that support vertex removal make use of Lemma \ref{lem:remone}.
 Lemma \ref{lem:remone} is demonstrated in Figure \ref{fig:remone}.  No matter which vertex is removed, the resulting
 subgraph is still properly colored using at most four colors.
 
-\begin{figure}
+\begin{figure}[h]
   \label{fig:remone}
   \begin{minipage}{1.25in}
     \begin{center}
@@ -468,10 +514,11 @@ subgraph is still properly colored using at most four colors.
       \(G-d\)
     \end{center}
   \end{minipage}
-  \caption{Vertex Removal Example}
+  \caption{Lemma \ref{lem:remone} Example}
 \end{figure}
 
-Step \ref{step:small} removes vertices with degree less than \(k\).  This is supported by Theorem \ref{thm:lowdeg}.
+Steps \ref{step:smallcalc} and \ref{step:small} remove vertices with degrees less than \(k\).  This is supported by
+Theorem \ref{thm:lowdeg}.
 
 \begin{theorem}
   \label{thm:lowdeg}
@@ -485,78 +532,147 @@ Step \ref{step:small} removes vertices with degree less than \(k\).  This is sup
   For the converse, assume that \(G-v\) is \(k\)-colorable.  By assumption, \(\deg(v)<k\), meaning \(v\) has at
   most \(k-1\) neighbors, using at most \(k-1\) colors.  Thus, there is always an additional color available for
   \(v\).  So extend \(G-v\) to \(G\) and color \(v\) with one of the available \(k-\deg(v)\) colors.  The result is
-  a proper \coloring{\left((k-1)+1=k\right)} of \(G\).
+  a proper coloring of \(G\) using at most \(k\) colors.
 
   \(\therefore G\) is \colorable{k}.
 \end{proof}
 
+Theorem \ref{thm:lowdeg} is demonstrated in Figure \ref{fig:lowdeg} for \(k=4\) and \(\deg(v)=3\).
+
+\begin{figure}[h]
+  \label{fig:lowdeg}
+  \begin{center}
+    \begin{tikzpicture}
+      \colorlet{c1}{green!25!white}
+      \colorlet{c2}{blue!25!white}
+      \colorlet{c3}{red!25!white}
+      \colorlet{c4}{yellow!25!white}
+      \begin{scope}[every node/.style={coordinate}]
+        \cycleNnodes{4}{(0,0)}{1in}{135}{c};
+      \end{scope}
+      \begin{scope}[every node/.style={labeled node}]
+        \node [fill=c1] (a) at (c1) {\(a\)};
+        \node [fill=c2] (v) at (c2) {\(v\)};
+        \node [fill=c3] (b) at (c3) {\(b\)};
+        \node [fill=c4] (c) at (c4) {\(c\)};
+        \node [fill=c2,below left=of a] (d) {\(d\)};
+      \end{scope}
+      \draw (a) edge (b) edge (c) edge (d);
+      \draw [dashed,red] (v) edge (a) edge (b) edge (c);
+      \draw (b) edge (c);
+      \draw (c) edge (d);
+    \end{tikzpicture}
+  \end{center}
+  \caption{Theorem \ref{thm:lowdeg} Example}
+\end{figure}
+
+The called subroutine actually removes all such vertices at once, which is supported by the inductive proof in
+Corollary \ref{cor:lowdeg}.
+
 \begin{corollary}
   \label{cor:lowdeg}
-  Let \(G\) be a graph of order \(n\) and let \(X=\setb{v\in V(G)}{\deg(v)<k}\) for some \(k\in\N\):
-  \begin{quote}
-    \(G\) is \colorable{k} \(\iff G-X\) is \colorable{k}.
-  \end{quote}
+  Let \(G\) be a graph of order \(n\) and let \(X=\setb{v\in V(G)}{\deg(v)<k}\) for some \(k\in\N\).  \(G\) is
+  \colorable{k} iff \(G-X\) is \colorable{k}.
 \end{corollary}
 
 \begin{proof}
   (by induction on \(\abs{X}\))
-  \begin{enumerate}
-  \item (Base Case) Let \(\abs{X}=0\).
+  \begin{description}
+  \item[Base Case:] Let \(\abs{X}=0\).
 
-    Since \(G-X=G\), \(G\) is \colorable{k} \(\iff G-X=G\) is \colorable{k}.
+    But \(G-X=G\) (trivial case).
 
-  \item (Inductive Assumption) Let \(\abs{X}=r\).
+  \item[Inductive Assumption:] Let \(\abs{X}=r\).
 
-    Assume \(G\) is \colorable{k} \(\iff G-X\) is \colorable{k}.
+    Assume \(G\) is \colorable{k} iff \(G-X\) is \colorable{k}.
 
-  \item (Inductive Step) Consider \(\abs{X}=r+1\).
+  \item[Inductive Step:] Consider \(\abs{X}=r+1\).
     
     Since \(\abs{X}=r+1>0\), there exists \(v\in X\) such that \(\deg(v)<k\).  Let \(Y=X-\set{v}\) and note that
-    \(\abs{Y}=\abs{X}-1=(r+1)-1=r\).  So, \(G\) is \colorable{k} \(\iff G-v\) is \colorable{k} (Lemma \ref{lem:lowdeg}) \(\iff
-    (G-v)-Y=G-X\) is \colorable{k} (inductive assumption).
-  \end{enumerate}
+    \(\abs{Y}=\abs{X}-1=(r+1)-1=r\).  So, \(G\) is \colorable{k} iff \(G-v\) is \colorable{k} (Theorem
+    \ref{thm:lowdeg}) iff \((G-v)-Y\) is \colorable{k} (inductive assumption).
+  \end{description}
 
-  Therefore, by the principle of induction, \(G\) is \colorable{k} \(\iff G-X\) is \colorable{k}.
+  Therefore, by the principle of induction, \(G\) is \colorable{k} iff \(G-X\) is \colorable{k}.
 \end{proof}
 
-\subsection{Neighbor Subsets}
+Returning to the example in Figure \ref{fig:lowdeg}, note that \(X=\set{v,b}\) is the set of all vertices with
+degree less than \(4\) and so both could be removed at once in accordance with Corollary \ref{cor:lowdeg}.
+Furthermore, after these vertices are removed, the remaining vertices \(a\), \(b\), and \(c\) will all have degree
+\(2\).  Since \(2<4\), the remaining vertices are subsequently removed, leaving \(n=0<4\), indicating that the
+graph is indeed \colorable{4}.  This iterative collapsing of a graph is an ideal situation.
 
-\begin{lemma}
-  \label{lem:subset}
-  Let \(G\) be a graph and let \(u,v\in V(G)\) such that \(N(u)\subseteq N(v)\):
-  \begin{quote}
-    \(G\) is \colorable{k} \(\iff G-u\) is \colorable{k}
-  \end{quote}
-\end{lemma}
+Step \ref{step:neighbor} removes vertices whose neighborhoods are subsets of other vertices.  This is supported by
+Theorem \ref{thm:subset}.
+
+\begin{theorem}
+  \label{thm:subset}
+  Let \(G\) be a graph and let \(u,v\in V(G)\) such that \(N(u)\subseteq N(v)\).  \(G\) is \colorable{k} iff \(G-u\)
+  is \colorable{k}.
+\end{theorem}
 
 \begin{proof}
-  \begin{description}
-  \item[]
-  \item[\(\implies\)] Assume \(G\) is \colorable{k}.
+  Assume \(G\) is \colorable{k}.  Therefore, by Lemma \ref{lem:remone}, \(G-u\) is also \colorable{k}.
 
-    \(\therefore G-u\) is \colorable{k} (Lemma \ref{lem:remone}).
+  For the converse, assume that \(G-v\) is \(k\)-colorable.  Since \(N(u)\subseteq N(v)\) and (by definition)
+  \(u\notin N(u)\), it must be the case that \(u\notin N(v)\) and hence \(uv\notin E(G)\).  Thus \(u\) and \(v\)
+  are allowed to have the same color.  Furthermore, since every vertex adjacent to \(u\) is also adjacent to \(v\),
+  none of these vertices can have the same color as \(v\).  So extend \(G-u\) to \(G\) and color \(u\) with the
+  same color as \(v\).  The result is a proper coloring of \(G\) using at most \(k\) colors.
 
-  \item[\(\impliedby\)] Assume \(G-u\) is \colorable{k}.
-
-    Since \(N(u)\subseteq N(v)\) and (by definition) \(u\notin N(u)\), it must be the case that \(u\notin N(v)\) and hence
-    \(uv\notin E(G)\).  Thus \(u\) and \(v\) are allowed to have the same color.  Furthermore, since every vertex adjacent to
-    \(u\) is also adjacent to \(v\), none of these vertices can have the same color as \(v\).  So extend \(G-u\) to \(G\) and
-    color \(u\) with the same color as \(v\).  The result is a proper coloring of \(G\) using the same \(k\) colors.
-
-    \(\therefore G\) is \colorable{k}.
-  \end{description}
+  \(\therefore G\) is \colorable{k}.
 \end{proof}
 
-\subsection{Edge Density (Tighter Bound)}
+Theorem \ref{thm:subset} is demonstrated in Figure \ref{fig:subset}.  Since \(N(u)\subseteq N(v)\), \(G\) and
+\(G-u\) are equivalently colorable.  Futhermore, once \(u\) is removed, the degrees of vertices \(a\) and \(c\)
+will have degree \(2\).  So if \(k=3\), those two vertices are subsequently removed by step \ref{step:small}.  The
+remaining graph is of order \(2\), which then passes the success check of step \ref{step:check} because \(2<3\), so
+indeed the graph is \colorable{3}.  Once again, this iterative removal of vertices is very powerful.
+
+\begin{figure}[h]
+  \label{fig:subset}
+  \begin{center}
+    \begin{tikzpicture}[every node/.style={labeled node}]
+      \colorlet{c1}{green!25!white}
+      \colorlet{c2}{blue!25!white}
+      \colorlet{c3}{red!25!white}
+      \node [fill=c1] (b) at (0,0) {\(b\)};
+      \node [fill=c2] (a) [above=of b] {\(a\)};
+      \node [fill=c2] (c) [below=of b] {\(c\)};
+      \node [fill=c3] (u) [left=of b] {\(u\)};
+      \node [fill=c3] (v) [right=of b] {\(v\)};
+      \draw [dashed,red] (u) edge (a) edge (b);
+      \draw (v) edge (a) edge (b) edge (c);
+      \draw (a) edge (b);
+      \draw (c) edge (b);
+    \end{tikzpicture}
+  \end{center}
+  \caption{Theorem \ref{thm:subset} Example}
+\end{figure}
+
+\subsubsection{Minimum Shared Neighbor Upper Bound}
+
+Steps \ref{step:select}--\ref{step:common} establish an upper bound for the minimum shared neighbor count between
+any two vertices in a graph that is assumed to be \colorable{k}.  This limit is dependent on the following facts
+that are guaranteed by previous steps:
+\begin{enumerate}
+\item \(2\le k<n\)
+\item There are no \(u,v\in V(G)\) such that \(N(u)\subseteq N(v)\)
+\end{enumerate}
+The supporting theorem uses these facts along with Lemma \ref{lem:neighbor} in its proof.
 
 \begin{lemma}
   \label{lem:neighbor}
-  Let \(G\) be a graph and let \(S\subseteq V(G)\) such that \(S\ne\emptyset\) and \(\forall\,u,v\in S,uv\notin E(G)\):
-  \[\left(\exists\,v\in S,\forall\,w\in V(G)-S,vw\in E(G)\right)\implies\forall\,u\in S,N(u)\subseteq N(v)\]
+  Let \(G\) be a graph and let \(S\) be a non-empty independent subset of \(V(G)\).  If there exists a vertex
+  \(v\in S\) such that \(v\) is adjacent to all vertices in \(V(G)-S\) (i.e., \(N(v)=V(G)-S\)) then for all
+  vertices \(u\in S\) it is the case that \(N(u)\subseteq N(v)\).
 \end{lemma}
 
 \begin{proof}
-  Assume \(\exists\,v\in S,\forall\,w\in V(G)-S,vw\in E(G)\).  Now, assume \(u\in S\):
+  Assume such a \(v\) exists and then assume that \(u\in S\).  If \(u=v\) then (trivially) \(N(v)=N(v)\), so assume
+  \(u\ne v\).  Furthermore, since \(u,v\in S\) and \(S\) is independent (by assumption), it must be the case that
+  \(u\) and \(v\) are not neighbors.
+
   \begin{description}
   \item[Case 1:] \(N(u)=\emptyset\).
       
@@ -564,43 +680,112 @@ Step \ref{step:small} removes vertices with degree less than \(k\).  This is sup
 
   \item[Case 2:] \(N(u)\ne\emptyset\).
 
-    Assume \(w\in N(u)\).  This means that \(uw\in E(G)\) and hence \(w\notin S\).  So \(w\in V(G)-S\) and thus, by assumption,
-    \(vw\in E(G)\). Hence \(w\in N(v)\) and therefore \(N(u)\subseteq N(v)\).
+    Assume \(w\in N(u)\).  This means that \(w\) is adjacent to \(u\) and hence \(w\notin S\), since \(S\) is an
+    independent set.  So \(w\in V(G)-S\) and thus, by assumption, \(v\) is adjacent to \(w\) and we can conclude
+    that \(w\in N(v)\).  Therefore \(N(u)\subseteq N(v)\).
   \end{description}
 
-  \(\therefore\forall\,u\in S,N(u)\subseteq N(v)\)
+  Therefore, for all \(u\in S\), \(N(u)\subseteq N(v)\).
 \end{proof}
 
-\subsection*{Neighborhood Intersection Test}
+Lemma \ref{lem:neighbor} is demonstrated in Figure \ref{fig:neighbor}.  Note that since \(v\in S\) is adjacent to
+every vertex in \(V(G)-S\), vertex \(u\in S\) can't help but be adjacent to some subset of \(N(v)\).
 
-\begin{lemma}
-  \label{lem:inter}
-  Let \(G\) be a graph of order \(n\) and size \(m\) such that \(\forall\,u,v\in V(G),N(u)\not\subseteq N(v)\) and let
-  \(k\in\N\) such that \(2\le k<n\):
-  \begin{quote}
-    \(G\) is \colorable{k} \(\implies\exists\,w,z\in V(G)\) such that \(\abs{N(w)\cap N(z)}\le n-2-\frac{n-2}{k-1}\).
-  \end{quote}
-\end{lemma}
+\begin{figure}[h]
+  \label{fig:neighbor}
+  \begin{center}
+    \begin{tikzpicture}
+      \draw (0in,0) ellipse (0.5in and 1in);
+      \draw (3in,0) ellipse (1.5in and 1in);
+      \begin{scope}[every node/.style={unlabeled node}]
+        \node (v) at (0in,0.25in) {};
+        \node (u) at (0in,-0.25in) {};
+        \node (w1) at (2in,0) {};
+        \node (w2) at (2.5in,0) {};
+        \node (w3) at (3in,0) {};
+        \node (w4) at (3.5in,0) {};
+        \node (w5) at (4in,0) {};
+      \end{scope}
+      \node [left=1ex of v] {\(v\)};
+      \node [left=1ex of u] {\(u\)};
+      \node at (0,-1.25in) {\(S\)};
+      \node at (3in,-1.25in) {\(V(G)-S\)};
+      \draw (v) [bend left] edge (w1);
+      \draw (v) [bend left] edge (w2);
+      \draw (v) [bend left] edge (w3);
+      \draw (v) [bend left] edge (w4);
+      \draw (v) [bend left] edge (w5);
+      \draw (u) [bend right] edge (w2);
+      \draw (u) [bend right] edge (w4);
+      \draw (u) [bend right] edge (w5);
+    \end{tikzpicture}
+  \end{center}
+  \caption{Lemma \ref{lem:neighbor} Example}
+\end{figure}
+
+Theorem \ref{thm:inter} establishes the desired upper bound.
+
+\begin{theorem}
+  \label{thm:inter}
+  Let \(G\) be a graph of order \(n\) and size \(m\) such that there are no \(u,v\in V(G)\) such that
+  \(N(u)\subseteq N(v)\), and let \(k\in\N\) such that \(2\le k<n\).  If \(G\) is \colorable{k} then there exists
+  two vertices \(w,z\in V(G)\) such that:
+  \[\abs{N(w)\cap N(z)}\le n-2-\frac{n-2}{k-1}\]
+\end{theorem}
 
 \begin{proof}
-  Assume \(G\) is \colorable{k}.  This means that \(V(G)\) can be distributed into \(k\) independent (some possibly empty)
-  subsets \(A_1,\ldots,A_k\) such that \(a_i=\abs*{A_i}\) and \(a_1\ge a_2\ge\cdots\ge a_k\).  Since \(n>k\), by the pigeonhole
-  principle, it must be the case that \(a_1\ge2\).  Assume \(v\in A_1\).
+  Assume \(G\) is \colorable{k}.  This means that \(V(G)\) can be distributed into \(k\) independent (some possibly
+  empty) subsets \(A_1,\ldots,A_k\) such that \(a_i=\abs*{A_i}\) and \(a_1\ge a_2\ge\cdots\ge a_k\).  Since
+  \(n>k\), by the pigeonhole principle, it must be the case that \(a_1\ge2\).  Assume \(v\in A_1\).
 
-  First, assume by way of contradiction (ABC) that \(v\) is adjacent to all other vertices in \(V(G)-A_1\).  Since \(a_1\ge2\),
-  there exists \(u\in A_1\) such that \(u\ne v\) and \(u\) is not adjacent to \(v\).  Thus, \(N(u)\subseteq N(v)\) (Lemma
-  \ref{lem:neighbor}), which contradicts the assumption.  Therefore, \(\exists\,v'\in V(G)-A_1\) such that \(vv'\notin E(G)\).
-  Assume \(v'\in A_i\) for some \(i\) such that \(1<i\le k\):
+  First, assume by way of contradiction (ABC) that \(v\) is adjacent to all other vertices in \(V(G)-A_1\).  Since
+  \(a_1\ge2\), there exists \(u\in A_1\) such that \(u\ne v\) and \(u\) is not adjacent to \(v\).  Thus, by Lemma
+  \ref{lem:neighbor}, \(N(u)\subseteq N(v)\), contradicting the assumption.  Note that this contradiction also
+  eliminates the degenerate case where \(A_1=V(G)\); however, this case does not occur here because the graph would
+  be an empty graph and would have been eliminated by previous steps.  Therefore, there exists some \(v'\in
+  V(G)-A_1\) such that \(v\) is not adjacent to \(v'\).  Assume \(v'\in A_i\) for some \(i\) such that \(1<i\le
+  k\):
 
   \begin{description}
   \item [Case 1:] \(a_i=1\)
 
     By the pigeonhole principle:
     \[a_1\ge\ceil*{\frac{n-1}{k-1}}\ge\frac{n-1}{k-1}\]
-    Now, assume by way of contradiction (ABC) that \(v'\) is adjacent to all vertices in \(V(G)-A_1-A_i\) and assume
-    \(u\in N(v)\).  Then it must be the case that \(u\in V(G)-A_1-A_i\) and so \(uv'\in E(G)\) and thus \(u\in N(v')\).
-    Therefore \(N(v)\subseteq N(v')\), which contradicts the assumption.  This means that there exists some
-    \(u\in V(G)-A_1-A_i\) such that \(uv'\notin E(G)\).  This results in the upper bound:
+    Now, assume by way of contradiction (ABC) that \(v'\) is adjacent to all vertices in \(V(G)-A_1-A_i\) and
+    assume \(u\in N(v)\).  Then it must be the case that \(u\in V(G)-A_1-A_i\), and so \(u\) is adjacent to \(v'\),
+    and thus \(u\in N(v')\).  Therefore \(N(v)\subseteq N(v')\), which contradicts the assumption.  This situation
+    is demonstrated by Figure \ref{fig:aione}.
+
+    \begin{figure}[h]
+      \label{fig:aione}
+      \begin{center}
+        \begin{tikzpicture}
+          \draw (0,0) ellipse (0.5in and 1in);
+          \draw (2in,0) ellipse (0.5in and 1in);
+          \draw (4in,0) ellipse (0.5in and 1in);
+          \begin{scope}[every node/.style={unlabeled node}]
+            \node (v) at (0,0) {};
+            \node (u1) at (2in,0.5in) {};
+            \node (u2) at (2in,0.25in) {};
+            \node (u3) at (2in,0in) {};
+            \node (u4) at (2in,-0.25in) {};
+            \node (u5) at (2in,-0.5in) {};
+            \node (vp) at (4in,0) {};
+          \end{scope}
+          \node [left=1ex of v] {\(v\)};
+          \node [right=1ex of vp] {\(v'\)};
+          \node at (0,-1.25in) {\(A_1\)};
+          \node at (2in,-1.25in) {\(V(G)-A_1-A_i\)};
+          \node at (4in,-1.25in) {\(A_i\)};
+          \draw (v) edge (u1) edge (u3) edge (u4);
+          \draw (vp) edge (u1) edge (u2) edge (u3) edge (u4) edge (u5);
+        \end{tikzpicture}
+      \end{center}
+      \caption{Case \(a_i=1\) Contradiction}
+    \end{figure}
+
+    So there must exist some \(u\in V(G)-A_1-A_i\) such that \(u\) is not adjacent to \(v'\).  This results in the
+    upper bound:
     \[\abs{N(v)\cap N(v')}\le n-2-\frac{n-1}{k-1}\]
     Comparing this to the desired bound:
     \[\left(n-2-\frac{n-2}{k-1}\right)-\left(n-2-\frac{n-1}{k-1}\right)=\frac{1}{k-1}>0\]
